re PR middle-end/55235 (FAIL: gcc.target/i386/pr44948-2a.c)

PR middle-end/55235
	* expr.c (store_expr): Do not call emit_block_move for
	non-BLKmode values.

From-SVN: r193314